# phylax-docs

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: docs.yml
docs/: pyproject.toml
docs/help/: _meta.yaml
docs/help/de/: background.md  faq.md  glossary.md  index.md
docs/help/de/backup/: create-and-restore.md
docs/help/de/daily-use/: lab-values.md  observations.md  open-points.md  profile-base-data.md  supplements.md
docs/help/de/data/: epa-import.md  export.md  profile-import.md
docs/help/de/getting-started/: first-steps.md  what-is-phylax.md
docs/help/en/: background.md  faq.md  glossary.md  index.md
docs/help/en/backup/: create-and-restore.md
docs/help/en/daily-use/: lab-values.md  observations.md  open-points.md  profile-base-data.md  supplements.md
docs/help/en/data/: epa-import.md  export.md  profile-import.md
docs/help/en/getting-started/: first-steps.md  what-is-phylax.md
scripts/: generate_mkdocs_nav.py
